samples/_failures_safe/1761167418_5551ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8513c61f.c: In function ‘main’:
./samples/SAFE/__tmp_8513c61f.c:148:20: error: missing terminating " character
  148 |             printf("Invalid input
      |                    ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8513c61f.c:148:13: error: expected expression at end of input
  148 |             printf("Invalid input
      |             ^~~~~~
./samples/SAFE/__tmp_8513c61f.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8513c61f.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8513c61f.c:148:13: error: expected declaration or statement at end of input
